--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "gsap": "^3.12.7",
     "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
