--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-scroll": "^1.9.2",
     "react-transition-group": "^4.4.5",
     "simplex-noise": "^4.0.3"
   },
