--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "lucide-react": "^0.469.0",
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
+    "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "react-transition-group": "^4.4.5"
+    "react-scroll": "^1.9.2",
+    "react-transition-group": "^4.4.5",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
