--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-transition-group": "^4.4.5",
-    "simplex-noise": "^4.0.3"
+    "simplex-noise": "^4.0.3",
+    "three.js": "^0.77.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
