--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
+  "plugins": ["prettier-plugin-tailwindcss"],
   "tabWidth": 2,
-  "useTabs": false
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "none"
 }
