--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
     "lucide-react": "^0.475.0",
@@ -32,14 +33,15 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
+    "eslint": "^9.20.1",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "fluid-tailwind": "^1.0.4",
     "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.15",
     "vite": "^6.0.1"
   }
