--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
+    "format": "prettier --write .",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
