--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enigma",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ppmpreetham.github.io/enigma25",
+  "homepage": ".",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
