--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
+    "axios": "^1.7.9",
     "eslint-plugin-react-hooks": "^5.1.0",
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
